--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:launchMode="singleTask"
             android:parentActivityName=".ui.activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.activity.FileBrowserActivity" />
     </application>
 
 </manifest>
